# irc0

./: .ghci  irc.lua  irc0.cabal  linux_exported_symbols.txt  macos_exported_symbols.txt
include/: ircclient.h
lua-extension/: ircclient.c  meson.build
src/: Bag.hs  CApi.hs  CToClient.hs  Client.hs  ClientToC.hs  Connection.hs  EventLoop.hs  Extension.hs  HookMap.hs  Main.hs  NestedIO.hs  Textbox.hs  UI.hs  WithIO.hs
src/Extension/: Base.hs  CApi.hs
